<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_name"
            android:id="@+id/textView_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>

    <!-- Text field to input name !-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_nameHint"
        android:id="@+id/editText_name"
        android:singleLine="true"
        android:maxLength="20"
        android:nextFocusDown="@+id/editText_phone"
        android:imeOptions="actionNext"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_phone"
        android:id="@+id/textView_phone"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp" />

    <!-- Text field to input phone !-->
    <EditText
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/editText_phone"
        android:nextFocusDown="@+id/editText_rate"
        android:imeOptions="actionNext"
        android:maxLength="20"
        android:hint="@string/editText_phoneHint"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_rate"
        android:id="@+id/textView_rate"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:id="@+id/textView_dollarSign"
            android:layout_marginLeft="10dp" />

        <!-- Text field to input rate !-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/editText_rateHint"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:id="@+id/editText_rate"
            android:nextFocusDown="@+id/pick_start_date"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_start"
            android:id="@+id/textView_start"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_weight=".3" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".7">

            <!-- Text field to input start date !-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pick_start_date"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:id="@+id/pick_start_date"
                android:inputType="date"
                android:nextFocusDown="@+id/pick_end_date"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <!-- Text field to input end date !-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pick_end_date"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:id="@+id/pick_end_date"
                android:nextFocusDown="@+id/pick_start_time"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

      <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_end"
            android:id="@+id/textView_end"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_weight=".3" />

         <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7">

             <!-- Text field to input start time !-->
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/pick_start_time"
                 android:singleLine="true"
                 android:imeOptions="actionNext"
                 android:inputType="time"
                 android:id="@+id/pick_start_time"
                 android:nextFocusDown="@+id/pick_end_time"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp" />

             <!-- Text field to input end time !-->
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:hint="@string/pick_end_time"
                 android:imeOptions="actionGo"
                 android:inputType="time"
                 android:id="@+id/pick_end_time"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp" />

         </LinearLayout>
    </LinearLayout>

</LinearLayout>